Wrap fix

--- a/css/style.css
+++ b/css/style.css
@@ -305,7 +305,6 @@ body {
 
 .video-card {
   display: flex;
-  flex-wrap: wrap;
   column-gap: 15px;
   row-gap: 50px;
 }
